# ray-tracer

./: .gitignore  ACCELERATORS.md  BVH_PLAN.md  Cargo.toml  Feature_log.md  README.md  build.rs  clean.ps1  scene.yaml
.cargo/: config.toml
benches/: bvh.rs
bmw_m4_csl_2023/: license.txt
bruh/: Cargo.toml  build.rs  compile_shaders.bat  compile_shaders.sh  cornell.yaml  noob.py  output.json  output1.json  plane.yaml  scene.yaml  scene1.yaml
bruh/Interior/: room.gltf
bruh/benedikt/: ior_test.json  lego_bulldozer.json
bruh/bmw_m4_csl_2023/: scene.gltf
bruh/scenes/: bmps_official.mtl  coffee_machine.yaml  lego_bulldoser.yaml  test_scene.yaml
bruh/scenes/data/test_scene/: cube1.mtl  grid.mtl  numbers.mtl
bruh/shaders/: main.comp  main.comp.spv  main.frag  main.frag.spv
bruh/shaders/imports/: buffera.glsl  common.glsl  disney.comp  global.comp  intersects.comp  random.comp  ray.comp  ray.frag  sampling.comp
bruh/src/: main.rs  scene.rs  types.rs
bruh/src/accelerators/: aabb.rs  bvh.rs  bvhfromotherland.rs  mod.rs  test.rs
bruh/src/scene/: gltf.rs  loader.rs  mitsuba.rs  mod.rs  weird.rs  yaml.rs
bruh/src/types/: aligned.rs  camera_buffer_obj.rs  material.rs  mod.rs  triangle.rs
bruh/src/vulkan/: accumulate_image.rs  bufferbuilder.rs  buffers.rs  command_buffers.rs  command_pool.rs  descriptors.rs  fps_counter.rs  framebuffers.rs  instance.rs  logical_device.rs  mod.rs  physical_device.rs  pipeline.rs  sampler.rs  scene.rs  swapchain.rs  sync_objects.rs  texture.rs  utils.rs
bruh/src/vulkan/texture/: mod.rs  skybox.rs  textures.rs
bruhv2/: Cargo.toml  compile_shaders.bat
bruhv2/src/: camera.rs  colour.rs  main.rs  mesh.rs  renderer.rs
bruhv2/src/accelerators/: aabb.rs  bvh.rs  mod.rs
bruhv2/src/materials/: mod.rs  texture.rs
bruhv2/src/primitives/: mod.rs  triangle.rs
bruhv2/src/scenes/: gltf_import.rs  mod.rs
bruhv2/src/shaders/spv/: frag.spv  vert.spv
bruhv2/src/vulkan/: api.rs  computer_renderpass.rs  context.rs  mod.rs
images/materials/: stitch.py
objconvert/: Cargo.toml  scene.yaml
objconvert/hi/: lowpoly.mtl
objconvert/src/: main.rs
raytracer/: Cargo.toml  compile_shaders.bat
raytracer/shaders/: frag.spv  shader.vert  vert.spv
raytracer/src/: main.rs
scenes/: plane.yaml
scenes/benedikt/: water_caustics.json
scenes/low_poly_lake_scene/: scene.gltf
scenes/nice/: lego_bulldozer.yaml  teapot_full.yaml  test_scene.yaml
shaders/: main.comp.spv
shaders/imports/: common.glsl  disney.comp
src/: aabb.rs  bvh.rs  camera.rs  colour.rs  cube.rs  fps_counter.rs  hittable.rs  hittable_list.rs  interval.rs  lib.rs  main.rs  material.rs  perlin.rs  quad.rs  ray.rs  sphere.rs  texture.rs  translate.rs  utils.rs  vec3.rs
src/accelerators/: aabb.rs  bin_sah.rs  bvh.rs  mod.rs
src/app/: accumulate_image.rs  app.rs  camera_controller.rs  command_buffers.rs  constants.rs  data.rs  metrics.rs  mod.rs  queue.rs  render_controller.rs  save_frame.rs  scene_reload.rs  shader_reload.rs
src/gui/: frontend.rs  gui_data.rs  gui_renderer.rs  mod.rs  panels.rs  vulkan_backend.rs
src/scene/: bufferbuilder.rs  gltf.rs  loader.rs  mod.rs  weird.rs  yaml.rs
src/shaders/: compile_shaders.bat  compile_shaders.sh  compositor.frag  compositor.frag.spv  compositor.vert  compositor.vert.spv  compositor_reduce.comp  compositor_reduce.comp.spv  gui.frag  gui.frag.spv  gui.vert  gui.vert.spv  heatmap.frag  heatmap.frag.spv  heatmap.vert  heatmap.vert.spv  main.comp  main.comp.spv
src/types/: aligned.rs  camera_buffer_obj.rs  light.rs  material.rs  mod.rs  triangle.rs
src/ui/: mod.rs
tracer/: Cargo.toml  rustfmt.toml
tracer/benches/: aabb_combine.rs  ray_triangle_bm.rs
tracer/src/: aabb.rs  bvh.rs  camera.rs  colour.rs  hittable.rs  hittable_list.rs  lib.rs  main.rs  material.rs  mesh.rs  perlin.rs  utils.rs
tracer/src/accelerators/: aabb.rs  bvh.rs  mod.rs  oldbvh.rs
tracer/src/accelerators/bvh/: binsahbvh2.rs  binsahbvh2rtbvh.rs  bvh.rs  bvh2.rs  mod.rs  sahbvh2.rs
tracer/src/core/: camera.rs  hittable.rs  hittable_list.rs  interval.rs  mod.rs  ray.rs
tracer/src/geometry/: mod.rs  translate.rs  wireframe.rs
tracer/src/geometry/objects/: cube.rs  mesh.rs  mod.rs  quad.rs  sphere.rs  triangle.rs
tracer/src/materials/: material.rs
tracer/src/textures/: mod.rs  texture.rs
tracer/src/utils/: colour.rs  mod.rs
traditional/: Cargo.toml  compile_shaders.bat  compile_shaders.sh
(+95 files in other folders)
