[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"
build = "build.rs"
rust-version = "1.85.0"

[dependencies]
anyhow = "1"
bincode = "1.3.3"
crossbeam-channel = "0.5.15"
eframe = "0.32.3"
glam = { version = "0.29.2", features = ["serde"] }
gltf = { version = "1.4.1", features = ["KHR_materials_emissive_strength", "KHR_materials_ior", "KHR_materials_specular", "KHR_materials_transmission", "KHR_texture_transform", "extensions"] }
image = "0.25.5"
log = "0.4"
oidn = "2.2.4"
png = "0.17"
pretty_env_logger = "0.5"
quick-xml = "0.37.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
thiserror = "1"
tobj = { version = "3", features = ["log"] }
vulkanalia = { version = "0.25.0", features = ["libloading", "provisional", "window"] }
winit = "0.29"

[profile.release]
debug = 2
