[package]
name = "raytracer"
version = "0.1.0"
edition = "2024"
build = "build.rs"
rust-version = "1.85.0"

[dependencies]
anyhow = "1"
bincode = "2"
crossbeam-channel = "0.5.15"
egui = "0.34"
glam = { version = "0.33", features = ["serde"] }
gltf = { version = "1.4", features = ["KHR_materials_emissive_strength", "KHR_materials_ior", "KHR_materials_specular", "KHR_materials_transmission", "KHR_texture_transform", "extensions"] }
image = "0.25"
log = "0.4"
png = "0.18"
pretty_env_logger = "0.5"
quick-xml = "0.40"
rayon = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2"
tobj = { version = "4", features = ["log"] }
vulkanalia = { version = "0.35", features = ["libloading", "provisional", "window"] }
winit = "0.30"

[profile.release]
debug = 2

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "bvh"
harness = false
