[package]
name = "bruhv2"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
ash = { version = "0.38.0", features = ["debug", "linked"] }
ash-window = "0.13.0"
egui = "0.29.1"
egui-ash = {path = "../egui_ash", features = ["gpu-allocator", "persistence"]}
glam = "0.29.2"
gpu-allocator = { version = "0.27.0", features = ["vulkan"] }
tobj = "4.0.3"
vk-mem = "0.4.0"
