[package]
name = "ray-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastrand = "2.1.0"
image = "0.25.2"
indicatif = "0.17.8"
nalgebra = "0.33.0"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "ray_triangle_bm"
harness = false

[build]
rustflags = ["-C", "target-feature=+avx2"]
